# falkon

src/lib/app/: mainmenu.cpp
src/lib/tabwidget/: tabcontextmenu.cpp  tabcontextmenu.h  tabwidget.cpp
src/plugins/: CMakeLists.txt
src/plugins/OpenInMpv/: CMakeLists.txt  icon.cpp  icon.h  openinmpv.cpp  openinmpv.h  openinmpv.json  openinmpv.qrc
